# object-detection

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  codecov.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
object_detection/io/: annotator.py  datareader.py  settings.py
object_detection/yolo/: config.py  config_parser.py  units.py
object_detection/yolo/blocks/: base.py
object_detection/yolo/common/: layers.py
object_detection/yolo/common/blocks/: base.py  cnn.py
object_detection/yolo/v1/: architecture.py  hyperparams.py  model.py  settings.py
object_detection/yolo/v1/units/: blocks.py  linear_layer.py  unit1.py  unit2.py  unit3.py  unit4.py  unit5.py
tests/: conftest.py  test_pydantic.py
tests/yolo/base/: conftest.py  test_base_unit.py
tests/yolo/v1/: test_architecture.py
