[tool.poetry]
name = "object-detection"
version = "1.0.1"
description = "Implementation of different object detection algorithms."
authors = ["Masum Billal <proafxin@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torchvision = { version = "^0.16.0+cu118", source = "torch" }
torch = { version = "^2.1.0+cu118", source = "torch" }
torchaudio = { version = "^2.1.0+cu118", source = "torch" }
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"


[tool.pytest.ini_options]
# log_cli = true
addopts = ["-vv"]
# log_file = "logs/pytest.log"
testpaths = ["tests"]
# log_file_date_format = "%Y-%m-%d %H:%M:%S"
# log_file_format = "%(asctime)s - %(name)s %(levelname)s %(message)s"
# log_file_level = "INFO"
# log_format = "%(asctime)s %(levelname)s %(message)s"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
